tests/snapshots/trace_solver@16124590782743649599.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatInner
    fallback_to_outer: true
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: true
    eat_mut_inside_shared: true
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: Error
  bundle_name: rfc3627
  request: "[&mut ref mut x]: &mut [&T]"
---
[&mut ref mut x] @ s: &mut [&T]
// Applying rule `ConstructorRef`
&mut ref mut x @ &mut (*s).0: &mut &T
// Applying rule `Deref(EatInner, FallbackToOuter)`
ref mut x @ (*s).0: &T
// Applying rule `BindingBorrow`
x @ &mut (*s).0: &mut &T
// Applying rule `Binding`
let x: &mut &T = &mut (*s).0

// Final bindings (simplified):
let x: &mut &T = &mut (*s).0;
